fix switch api
